--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "mongoose": "^5.4.16",
     "morgan": "~1.9.0",
     "node-excel-to-json": "0.0.3",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.3",
     "tv4-node": "0.0.1",
-    "xlsx": "^0.14.1"
+    "xlsx": "^0.14.1",
+    "date-picker": "0.5.0"
   }
 }
