New functionality: Can now filter rewards by type. Correction: Better management of the number of rewards returned and displayed. Improve UI: better CSS and the beginning of a responsive design.

--- a/.gitignore
+++ b/.gitignore
@@ -163,5 +163,8 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
+# Sonarqube scanner
+.scannerwork/
+
 # End of https://www.gitignore.io/api/node,intellij
 .idea/vcs.xml
