https in app.js and auto-signed certificate

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,6 @@ typings/
 
 # End of https://www.gitignore.io/api/node,intellij
 .idea/vcs.xml
+
+# My certificates (not in the depot, see 'app.js' and the https section)
+keys/
