--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "latest",
     "cookie-parser": "~1.4.3",
+    "date-picker": "0.5.0",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-jwt": "^5.3.1",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "latest",
     "mongoose": "^5.4.16",
     "morgan": "~1.9.0",
     "node-excel-to-json": "0.0.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.3",
     "tv4-node": "0.0.1",
-    "xlsx": "^0.14.1",
-    "date-picker": "0.5.0"
+    "xlsx": "^0.14.1"
   }
 }
