--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "express-jwt": "^5.3.3",
+    "express": "~4.17.1",
+    "express-jwt": ">=6.0.0",
     "flatpickr": "^4.6.3",
-    "http-errors": "~1.6.2",
+    "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.19",
-    "mongoose": "^5.9.22",
+    "lodash": ">=4.17.19",
+    "mongoose": ">=5.9.22",
     "morgan": "~1.9.0",
     "node-excel-to-json": "0.0.3",
     "passport": "^0.4.1",
