key and certificate update. packages update.

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,4 @@ typings/
 # My certificates (not in the depot, see 'app.js' and the https section)
 keys/
 .idea/encodings.xml
+/.idea/sonarIssues.xml
