--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
-    "debug": "~2.6.9",
-    "express": "~4.17.1",
-    "express-jwt": ">=6.0.0",
-    "flatpickr": "^4.6.3",
-    "http-errors": "~1.8.0",
+    "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.3",
+    "express": "~4.17.2",
+    "express-jwt": "^6.1.0",
+    "flatpickr": "^4.6.9",
+    "http-errors": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash": ">=4.17.19",
-    "mongoose": ">=5.9.22",
-    "morgan": "~1.9.0",
+    "lodash": ">=4.17.21",
+    "mongoose": "^5.13.14",
+    "morgan": "^1.10.0",
     "node-excel-to-json": "0.0.3",
-    "passport": "^0.4.1",
+    "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.4",
-    "tv4-node": "0.0.1",
-    "xlsx": "^0.14.5"
+    "pug": "^3.0.2",
+    "tv4": "^1.3.0",
+    "xlsx": "^0.17.5"
   }
 }
