--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.3",
@@ -22,6 +23,7 @@
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "tv4": "^1.3.0",
+    "warframe-worldstate-parser": "^2.23.2",
     "xlsx": "^0.17.5"
   }
 }
