REFACTO : Following sonarqube advices and use of Promises everywhere. ADD : search input in riven conditions.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 
 ## must be unique in a given SonarQube instance
-sonar.projectKey=Warstats
+sonar.projectKey=WarframeStats
 ## this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=Warstats
+sonar.projectName=WarframeStats
 sonar.projectVersion=1.0
  
 ## Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
@@ -20,7 +20,7 @@ sonar.projectVersion=1.0
 
 ## Node.js/Express.js Project
 sonar.sources=.
-sonar.exclusions=node_modules/**
+sonar.exclusions=node_modules/**,WarframeWorldState.js,textRequest.js,testtv4.js
 
 #sonar.branch.name=develop
 
