--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.6.5",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.3",
@@ -14,9 +14,9 @@
     "express-jwt": "^8.4.1",
     "flatpickr": "^4.6.9",
     "http-errors": "^1.8.1",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": ">=4.17.21",
-    "mongoose": "^5.13.16",
+    "mongoose": ">=5.13.22",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
