--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,9 +10,15 @@ jobs:
 
   build:
 
-    runs-on: node:23.3.0-alpine
+    runs-on: node:23-alpine
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag warstats-app:$(date +%s)
+    - name: Setup nodejs
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: docker build . --file Dockerfile --tag warstats-app:$(date +%s)
